version/0.31/_sources/api/solver/_autosummary/settings/numerics.rst.txt
:orphan:

.. _numerics:

numerics
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.numerics
    :show-inheritance:

.. rubric:: Attributes

============================================================================   =============================================================================================================

Attribute                                                                                                                                                                            Summary

============================================================================   =============================================================================================================
:ref:`tracking <tracking_1>`                                                                                                                 Group containing DPM tracking related settings.

:ref:`source_term_settings <source_term_settings>`                                                                                        Group containing DPM source term related settings.

:ref:`node_based_averaging <node_based_averaging>`                                    Menu containing options to enable/disable node-based averaging of DPM variables and DPM source terms. 

:ref:`dynamic_interaction_range_enabled <dynamic_interaction_range_enabled>`                                                                Enable/disable dynamic interaction range option.

:ref:`parcel_count_control <parcel_count_control>`                                 Options for increasing or decreasing the number of DPM numerical parcels to meet resolution requirements.

:ref:`high_res_tracking <high_res_tracking>`                                                                                                                                    Main object.

============================================================================   =============================================================================================================

.. rubric:: Included in:

======================================   ====================

Parent                                                Summary

======================================   ====================
:ref:`discrete_phase <discrete_phase>`       Toplevel object.

======================================   ====================

